Update URIs of links to "Other interesting music sites"

--- a/links.html
+++ b/links.html
@@ -97,7 +97,7 @@ Orchestra </a></font><font color="#ff0000"><br>香港青少年國樂團</font></
 　</td>
 
 <td target="_blank" align="center" width="657" height="28">
-<a target="_blank" href="http://www.bccma.net/portal/">BC 
+<a target="_blank" href="https://www.bccma.net/">BC 
 Chinese Orchestra</a><font color="#ff0000">&nbsp;&nbsp;&nbsp; 庇詩中樂協會</font></td>
 
 <td width="129" align="center" bgcolor="#000000" height="28">
@@ -109,7 +109,7 @@ Chinese Orchestra</a><font color="#ff0000">&nbsp;&nbsp;&nbsp; 庇詩中樂協會
 　</td>
 
 <td align="center" width="657" height="32">
-<a target="_blank" href="http://www.hkco.org/">Hong Kong Chinese Orchestra</a>
+<a target="_blank" href="https://www.hkco.org/">Hong Kong Chinese Orchestra</a>
 <font color="#ff0000">&nbsp;香港中樂團</font></td>
 
 <td width="129" align="center" bgcolor="#000000" height="32">
@@ -120,8 +120,8 @@ Chinese Orchestra</a><font color="#ff0000">&nbsp;&nbsp;&nbsp; 庇詩中樂協會
 <td width="127" height="32" align="center" bgcolor="#000000">　</td>
 
 <td align="center" width="657" height="32">
-<a target="_blank" href="http://www.ccom.edu.cn/">Central Conservatory of Music of China</a>
-<font color="#ff0000">中央音&#20048;&#23398;院</font></td>
+<a target="_blank" href="https://www.ccom.edu.cn/">Central Conservatory of Music of China</a>
+<font color="#ff0000">中央音乐学院</font></td>
 
 <td width="129" align="center" bgcolor="#000000" height="32">
 　</td>
@@ -131,7 +131,7 @@ Chinese Orchestra</a><font color="#ff0000">&nbsp;&nbsp;&nbsp; 庇詩中樂協會
 <td align="center" width="127" bgcolor="#000000" height="37">　</td>
 
 <td align="center" width="657" height="37">
-<a target="_blank" href="http://www.wangkwong.org/">Wang Kwong Chinese 
+<a target="_blank" href="https://www.facebook.com/wangkwong.chineseorchestra/">Wang Kwong Chinese 
 Orchestra</a> (Hong Kong) <font color="#ff0000">&nbsp;&nbsp; 宏光國樂團</font></td>
 
 <td width="129" align="center" bgcolor="#000000" height="37">
@@ -142,7 +142,7 @@ Orchestra</a> (Hong Kong) <font color="#ff0000">&nbsp;&nbsp; 宏光國樂團</fo
 <td width="127" bgcolor="#000000" height="33">　</td>
 
 <td width="657" valign="middle" align="center" height="33"> 
-<a target="_blank" href="http://www.vancouverchinesemusic.ca/">Vancouver Chinese 
+<a target="_blank" href="https://www.vancouverchinesemusic.ca/">Vancouver Chinese 
 Music Ensemble</a> <font color="#ff0000">溫哥華中華樂團</font></td>
 
 <td width="129" align="center" bgcolor="#000000" valign="middle" height="33">　</td>
@@ -153,8 +153,8 @@ Music Ensemble</a> <font color="#ff0000">溫哥華中華樂團</font></td>
 　</td>
 
 <td width="657" valign="middle" align="center" height="33">
-<a target="_blank" href="http://suona.com/default3.htm">
-<img border="0" src="images/suona_logo.gif" width="240" height="25"></a></td>
+<a target="_blank" href="https://www.suona.com/">
+<img border="0" src="images/suona_logo.gif" width="240" height="25" alt="吹鼓吹工作室"></a></td>
 
 <td width="129" align="center" bgcolor="#000000" valign="middle" height="33">
 　</td>
@@ -165,8 +165,8 @@ Music Ensemble</a> <font color="#ff0000">溫哥華中華樂團</font></td>
 　</td>
 
 <td width="657" valign="middle" align="center" height="33">
-<font color="#ff0000"><a target="_blank" href="http://www.shcmusic.edu.cn/">
-Shanghai Conservatory of Music</a> 上海音&#20048;学院</font></td>
+<font color="#ff0000"><a target="_blank" href="https://www.shcmusic.edu.cn/">
+Shanghai Conservatory of Music</a> 上海音乐学院</font></td>
 
 <td width="129" align="center" bgcolor="#000000" valign="middle" height="33">
 　</td>
@@ -177,21 +177,8 @@ Shanghai Conservatory of Music</a> 上海音&#20048;学院</font></td>
 　</td>
 
 <td width="657" valign="middle" align="center" height="33">
-<font color="#ff0000"><a target="_blank" href="http://www.sccm.cn/">SiChuan 
-Conservatory of Music</a> 四川音&#20048;学院</font></td>
-
-<td width="129" align="center" bgcolor="#000000" valign="middle" height="33">
-　</td>
-</tr>
-
-<tr>
-<td width="127" bgcolor="#000000" valign="middle" align="center" height="33">
-　</td>
-
-<td width="657" valign="middle" align="center" height="33">
-<font color="#ff0000">
-<a target="_blank" href="http://www.sycm.com.cn/shouye/index-english.htm">
-Shenyang Conservatory of Music (SYCM) </a>沈阳音&#20048;学院</font></td>
+<font color="#ff0000"><a target="_blank" href="http://www.sccm.cn/">Sichuan 
+Conservatory of Music</a> 四川音乐学院</font></td>
 
 <td width="129" align="center" bgcolor="#000000" valign="middle" height="33">
 　</td>
@@ -203,8 +190,8 @@ Shenyang Conservatory of Music (SYCM) </a>沈阳音&#20048;学院</font></td>
 
 <td width="657" valign="middle" align="center" height="33">
 <font color="#ff0000">
-<a target="_blank" href="http://www.tjcm.edu.cn/index.asp">Tianjin Conservatory 
-of Music</a> 天津音&#20048;学院</font></td>
+<a target="_blank" href="http://www.sycm.com.cn/eng/">Shenyang Conservatory of Music (SYCM)</a>
+沈阳音乐学院</font></td>
 
 <td width="129" align="center" bgcolor="#000000" valign="middle" height="33">
 　</td>
@@ -216,8 +203,8 @@ of Music</a> 天津音&#20048;学院</font></td>
 
 <td width="657" valign="middle" align="center" height="33">
 <font color="#ff0000">
-<a target="_blank" href="http://www.ccmusic.edu.cn/nei/index.asp">China 
-Conservatory of Music</a> 中国音&#20048;学院</font></td>
+<a target="_blank" href="https://www.tjcm.edu.cn/">Tianjin Conservatory 
+of Music</a> 天津音乐学院</font></td>
 
 <td width="129" align="center" bgcolor="#000000" valign="middle" height="33">
 　</td>
@@ -228,8 +215,9 @@ Conservatory of Music</a> 中国音&#20048;学院</font></td>
 　</td>
 
 <td width="657" valign="middle" align="center" height="33">
-<font color="#ff0000"><a target="_blank" href="http://www.xacom.edu.cn/">Si'An 
-Conservatory of Music</a> 西安音&#20048;学院</font></td>
+<font color="#ff0000">
+<a target="_blank" href="https://www.ccmusic.edu.cn/">China 
+Conservatory of Music</a> 中国音乐学院</font></td>
 
 <td width="129" align="center" bgcolor="#000000" valign="middle" height="33">
 　</td>
@@ -240,8 +228,8 @@ Conservatory of Music</a> 西安音&#20048;学院</font></td>
 　</td>
 
 <td width="657" valign="middle" align="center" height="33">
-<font color="#ff0000"><a target="_blank" href="http://www.xhcom.edu.cn/">Xing 
-Hai Conservatory of Music</a>&nbsp; 星海音&#20048;学院</font></td>
+<font color="#ff0000"><a target="_blank" href="https://www.xacom.edu.cn/">Xi’an 
+Conservatory of Music</a> 西安音乐学院</font></td>
 
 <td width="129" align="center" bgcolor="#000000" valign="middle" height="33">
 　</td>
@@ -252,8 +240,20 @@ Hai Conservatory of Music</a>&nbsp; 星海音&#20048;学院</font></td>
 　</td>
 
 <td width="657" valign="middle" align="center" height="33">
-<font color="#FF0000"><a target="_blank" href="http://www.whcm.com.cn/">Wu Han 
-Conservatory of Music</a> 武</font><font color="#ff0000">汉音&#20048;学院</font></td>
+<font color="#ff0000"><a target="_blank" href="https://www.xhcom.edu.cn/">Xinghai
+Conservatory of Music</a>&nbsp; 星海音乐学院</font></td>
+
+<td width="129" align="center" bgcolor="#000000" valign="middle" height="33">
+　</td>
+</tr>
+
+<tr>
+<td width="127" bgcolor="#000000" valign="middle" align="center" height="33">
+　</td>
+
+<td width="657" valign="middle" align="center" height="33">
+<font color="#FF0000"><a target="_blank" href="https://www.whcm.edu.cn/">Wuhan 
+Conservatory of Music</a> 武汉音乐学院</font></td>
 
 <td width="129" align="center" bgcolor="#000000" valign="middle" height="33">
 　</td>
@@ -273,7 +273,7 @@ Conservatory of Music</a> 武</font><font color="#ff0000">汉音&#20048;学院</
 
 <td width="657" valign="middle" align="center" height="61">
 <font color="#FFFFFF" size="4">
-<a target="_blank" href="http://www.asian.ca/heritagemonth/index.html">Edmonton 
+<a target="_blank" href="https://asianheritagemonth.ca/">Edmonton 
 Asia Pacific Month website</a></font></td>
 
 <td width="129" align="center" bgcolor="#000000" valign="middle" height="61">
